crates/templates/tests/snapshots/root__function_template-12.snap
---
source: crates/templates/tests/root.rs
description: "Function with a local and two global default options, one with the same name"
expression: output
---
root() {
  local rargs_default

  # Parse command arguments
  parse_root "$@"

  if [[ -z "$rargs_default" ]]; then
    rargs_default="true"
  fi
  echo "No implementation body found for root function"
}
