crates/templates/tests/snapshots/root__function_template-15.snap
---
source: crates/templates/tests/root.rs
description: Function with default and required positional argument
expression: output
---
root() {
  local rargs_default
  # Parse command arguments
  parse_root "$@"

  
  if [[ -z "$rargs_default" ]]; then
    rargs_default="true"
  fi
  
  if [[ -z "$rargs_default" ]]; then
    printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing required option: " "default" >&2
    usage >&2
    exit 1
  fi
  echo "No implementation body found for root function"
}
