crates/templates/tests/snapshots/root__function_template-20.snap
---
source: crates/templates/tests/root.rs
description: Function with dependencies
expression: output
---
root() {

  # Parse command arguments
  parse_root "$@"

  # Check dependencies
  for dependency in foo bar; do
    if ! command -v $dependency >/dev/null 2>&1; then
      printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing dependency: " "$dependency" >&2
      exit 1
    fi
  done

  echo "No implementation body found for root function"
}
