crates/templates/tests/snapshots/root__function_template-8.snap
---
source: crates/templates/tests/root.rs
description: "Function with a local and two global required options, one with the same name"
expression: output
---
root() {
  local rargs_require

  # Parse command arguments
  parse_root "$@"

  
  if [[ -z "$rargs_require" ]]; then
    printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing required option: " "require" >&2
    usage >&2
    exit 1
  fi
  echo "No implementation body found for root function"
}
